--- a/src/css/utility/_color.scss
+++ b/src/css/utility/_color.scss
@@ -1,16 +1,14 @@
 :root {
-    
-    --white : #FFFFFF; //bg
-    //purples
-    --light-purple : #A5A6F6;
-    --dark-purple: #7879F1;
-    //greys
-    
-    --grey-lightest : #F9F9F9 ; //bg
-    --grey-light:#C0C0C0;
-    --grey-scroll: #EBEBEB;
-    --grey-med : #A4A4A4;
-    --grey-dark :#676767;
+  --white: #ffffff; //bg
+  //purples
+  --light-purple: #a5a6f6;
+  --dark-purple: #7879f1;
+  //greys
+  --grey-lightest: #f9f9f9; //bg
+  --grey-light: #c0c0c0;
+  --grey-scroll: #ebebeb;
+  --grey-med: #a4a4a4;
+  --grey-dark: #676767;
 
-    --accent-1: #FF906D;
+  --accent-1: #ff906d;
 }
