--- a/src/css/utility/_scrollbar.scss
+++ b/src/css/utility/_scrollbar.scss
@@ -1,17 +1,17 @@
 /* width */
 .Container__patients::-webkit-scrollbar {
-    width: 20px;
+  width: 20px;
 }
 
 /* Track */
 .Container__patients::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #EBEBEB;
-    //border-radius: 10px;
+  box-shadow: inset 0 0 5px #ebebeb;
+  //border-radius: 10px;
 }
 
 /* Handle */
 .Container__patients::-webkit-scrollbar-thumb {
-    background: var(--grey-scroll);
-    height: 20px;
-    border-radius: 10px;
+  background: var(--grey-scroll);
+  height: 20px;
+  border-radius: 10px;
 }
