--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4,6 +4,10 @@
 @import "utility/fonts";
 @import "utility/scrollbar";
 
+body {
+  font-family: var(--font-primary);
+}
+
 .Container {
   display: grid;
   height: 100vh;
@@ -12,6 +16,7 @@
   border-radius: 30px;
   grid-template-columns: 20vw 80vw;
   grid-template-rows: 12vh 65vh 23vh;
+
   &__header {
     display: flex;
     justify-content: space-between;
@@ -19,12 +24,27 @@
     margin: auto;
     padding: 0 var(--row-pad);
   }
+
   &__units {
     grid-row: 1/4;
     grid-column: 1;
     border-right: 3px solid rgba(229, 229, 229, 0.19);
     background-color: var(--white);
+    flex-flow: column;
+    align-items: center;
   }
+
+  nav {
+    ul {
+      list-style: none;
+    }
+
+    button {
+      background: none;
+      border: none;
+    }
+  }
+
   &__patients {
     grid-row: 2;
     grid-column: 2;
@@ -68,8 +88,17 @@
   }
 }
 .Logo {
-  width: 50px;
-  height: 50px;
+  &__img {
+    width: 3.5rem;
+  }
+
+  &__title {
+    font-family: var(--font-accent);
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: 0.12em;
+    align-self: center;
+  }
 }
 
 time {
