--- a/src/css/style.css
+++ b/src/css/style.css
@@ -161,6 +161,11 @@ body {
   font-family: var(--font-primary);
 }
 
+hr {
+  width: 80%;
+  color: var(--grey-lightest);
+}
+
 .Container {
   display: -ms-grid;
   display: grid;
@@ -266,13 +271,18 @@ body {
   background-color: var(--lightblue);
 }
 
+.Logo {
+  margin-top: 2em;
+}
+
 .Logo__img {
   width: 3.5rem;
+  margin-right: 0.4rem;
 }
 
 .Logo__title {
   font-family: var(--font-accent);
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 600;
   letter-spacing: 0.12em;
   -ms-flex-item-align: center;
